--- a/index.html
+++ b/index.html
@@ -290,6 +290,13 @@
             </div>
         </section>
         <!-- end section 6 -->
+
+        <section>
+            <div class="container">
+                <h1 class="my-4" style="color: #168385;text-align: center; font-weight: bold;">Sekolah Pengguna Soalku</h1>
+                <img src="img/Proposal Produk Soalku.id 1.png" alt="Daftar Sekolah Pengguna Soalku" class="main-image">
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
