--- a/index.html
+++ b/index.html
@@ -120,47 +120,50 @@
         <section class="container py-5">
             <div class="row align-items-center">
                 <!-- Left side content (list of features) -->
-                <div class="col-md-6">
+                <div class="col-md-6" style="position: relative;">
                     <h2 class="fw-bold text-success">Jangan Daftar Jika Tidak Memudahkan</h2>
+                    <div style="background-color: rgb(255, 0, 0);position: absolute;width: 30px;display: block;height: 30px;border-radius: 30px;top: -20px;left: -10px;"></div>
                     <ul class="list-unstyled mt-4">
-                        <li class="d-flex align-items-center mb-3">
-                            <img src="img/check-icon.png" alt="Check" class="me-3" style="width: 30px;">
-                            Membuat anda tidak lagi lelah mengoreksi
+                        <li class="d-flex align-items-center mb-3 ms-3" style="position: relative;">
+                            <img src="/img/Gampang-icon.svg" alt="Check" class="" style="width: 30px;position: absolute;left: -10px;top:5px;">
+                            <p class="w-100 text-light p-2 ps-4" style="background-color: #168385;border-radius: 50px;">
+                                Membuat anda tidak lagi lelah mengoreksi
+                            </p>
                         </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <img src="img/check-icon.png" alt="Check" class="me-3" style="width: 30px;">
-                            Membuat anda tidak bingung menyiapkan soal AKM (Literasi & Numerasi)
+                        <li class="d-flex align-items-center mb-3 ms-3" style="position: relative;">
+                            <img src="/img/Gampang-icon.svg" alt="Check" class="" style="width: 30px;position: absolute;left: -10px;top:5px;">
+                            <p class="w-100 text-light p-2 ps-4" style="background-color: #168385;border-radius: 50px;">
+                                Membuat anda tidak bingung menyiapkan soal AKM (Literasi & Numerasi)
+                            </p>
                         </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <img src="img/check-icon.png" alt="Check" class="me-3" style="width: 30px;">
-                            Memudahkan anda mengukur kompetensi Literasi dan Numerasi Siswa
+
+                        <li class="d-flex align-items-center mb-3 ms-3" style="position: relative;">
+                            <img src="/img/Gampang-icon.svg" alt="Check" class="" style="width: 30px;position: absolute;left: -10px;top:5px;">
+                            <p class="w-100 text-light p-2 ps-4" style="background-color: #168385;border-radius: 50px;">
+                                Memudahkan anda mengukur kompetensi Literasi dan Numerasi Siswa
+                            </p>
                         </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <img src="img/check-icon.png" alt="Check" class="me-3" style="width: 30px;">
-                            Memungkinkan anda melakukan Asesmen Akhir Materi dengan 6 jenis soal
+
+                        <li class="d-flex align-items-center mb-3 ms-3" style="position: relative;">
+                            <img src="/img/Gampang-icon.svg" alt="Check" class="" style="width: 30px;position: absolute;left: -10px;top:5px;">
+                            <p class="w-100 text-light p-2 ps-4" style="background-color: #168385;border-radius: 50px;">
+                                Memungkinkan anda melakukan Asesmen Akhir Materi dengan 6 jenis soal
+                            </p>
                         </li>
-                        <li class="d-flex align-items-center mb-3">
-                            <img src="img/check-icon.png" alt="Check" class="me-3" style="width: 30px;">
-                            Memudahkan anda untuk mengetahui rincian kompetensi yang belum dikuasai
+
+                        <li class="d-flex align-items-center mb-3 ms-3" style="position: relative;">
+                            <img src="/img/Gampang-icon.svg" alt="Check" class="" style="width: 30px;position: absolute;left: -10px;top:5px;">
+                            <p class="w-100 text-light p-2 ps-4" style="background-color: #168385;border-radius: 50px;">
+                                Memudahkan anda untuk mengetahui rincian kompetensi yang belum dikuasai
+                            </p>
                         </li>
+                        
                     </ul>
                 </div>
 
                 <!-- Right side content (image) -->
                 <div class="col-md-6 text-center">
-                    <div class="position-relative">
-                        <!-- Main Screenshot -->
-                        <img src="img/screenshot.png" alt="Soalku Dashboard" class="img-fluid"
-                            style="width: 100%; max-width: 600px;">
-
-                        <!-- Decorative Circles -->
-                        <img src="img/circle-yellow.png" alt="Circle Decoration" class="position-absolute"
-                            style="top: -20px; right: -40px; width: 60px;">
-                        <img src="img/circle-blue.png" alt="Circle Decoration" class="position-absolute"
-                            style="bottom: 20px; left: -30px; width: 80px;">
-                        <img src="img/circle-red.png" alt="Circle Decoration" class="position-absolute"
-                            style="top: 50px; left: 200px; width: 40px;">
-                    </div>
+                   <img src="/img/Group 39190.png" class="w-100" alt="">
                 </div>
             </div>
         </section>
@@ -404,7 +407,7 @@
 
         </section> -->
         <section>
-            <div class="container">
+            <div class="container ">
                 <h2 class="section-title text-center">Apa yang Mereka Katakan Tentang Soalku?</h2>
                 <div class="row video-container justify-content-center">
                     <div class="col-md-5" style=" width: 633px; height: 390px;">
@@ -705,9 +708,20 @@
         <!-- end section 7 -->
 
         <!-- section 8 -->
-
+        <section>
+            <div class="container mx-auto row" style="background: url('/img/CTA.png');height: 674px;border-radius: 30px;">
+                <div class="col ms-5 my-auto">
+                    <h3 class="mb-5 fs-1">Serahkan Pembuatan Soal AKM Pada Kami dan Anda Fokus Pada Progam Peningkatan</h3>
+                    <button class="btn btn-light" style="border-radius: 30px ;" >Daftarkan Sekolah Anda Sekarang</button>
+                </div>
+                <div class="col">
+                    <img src="/img/Group 39189.png" alt="">
+                </div>
+            </div>
+        </section>
         <!-- end section 8 -->
 
+        <!-- #049088 dan #E4B421 -->
         <!-- section 9 -->
         <section>
             <div class="container py-3">
@@ -728,11 +742,16 @@
                                     <div class="">
                                         <div class="did-floating-label-content">
                                             <input class="did-floating-input form-control" type="text" name="" id="">
+                                            <label class="did-floating-label" for="">Nama Lengkap</label>
+                                        </div>
+
+                                        <div class="did-floating-label-content">
+                                            <input class="did-floating-input form-control" type="text" name="" id="">
                                             <label class="did-floating-label" for="">Nama Sekolah / Organisasi</label>
                                         </div>
 
                                         <div class="">
-                                            <a href="">H</a>
+                                            <a class="btn em-btn-primary rounded-4 shadow" href="">Jadwalkan Demo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -742,6 +761,8 @@
                 </div>
             </div>
         </section>
+
+        
         <!-- end section 9 -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
